--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": ""
+    "build": "tsc --outDir ./js -m commonjs -t es5 src/index.ts",
+    "watch": "tsc --outDir ./js -m commonjs -t es5 --watch src/index.ts"
   },
   "author": "Rustamspl",
   "license": "MIT",
   "dependencies": {
+    "ts-promise": "^0.3.0",
     "typescript": "^1.8.2"
   }
 }
